feat: k-fold has ok

--- a/sistemas-inteligentes/class/2024-10-23/test1.ipynb
+++ b/sistemas-inteligentes/class/2024-10-23/test1.ipynb
@@ -2213,7 +2213,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x72fd49cb0710>]"
+       "[<matplotlib.lines.Line2D at 0x7842e5b0d670>]"
       ]
      },
      "execution_count": 32,
@@ -2374,86 +2374,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Beta Zero: 0.6316810213298427\n",
-      " Beta One: 1.0567111490891936\n",
-      " RMSE: 1.7630021387343684\n",
+      "Beta Zero: 0.6251205526201298\n",
+      " Beta One: 1.063348130716576\n",
+      " RMSE: 1.9218938321395427\n",
       "\n",
       "\n",
       "\n",
       "\n",
-      "Beta Zero: 0.6320425864785588\n",
-      " Beta One: 1.054149350593536\n",
-      " RMSE: 1.814570585909227\n",
+      "Beta Zero: 0.6284720437993672\n",
+      " Beta One: 1.0572723963195196\n",
+      " RMSE: 2.148785513831148\n",
       "\n",
       "\n",
       "\n",
       "\n",
-      "Beta Zero: 0.6271494033756218\n",
-      " Beta One: 1.0599641549718128\n",
-      " RMSE: 1.8182125874521942\n",
+      "Beta Zero: 0.6171522280258435\n",
+      " Beta One: 1.0667552285671975\n",
+      " RMSE: 1.7729500877879374\n",
       "\n",
       "\n",
       "\n",
       "\n",
-      "Beta Zero: 0.6246181765946215\n",
-      " Beta One: 1.0597448058055314\n",
-      " RMSE: 1.9882316961496886\n",
+      "Beta Zero: 0.6316898324305644\n",
+      " Beta One: 1.0571510858951458\n",
+      " RMSE: 1.9404200352429979\n",
       "\n",
       "\n",
       "\n",
       "\n",
-      "Beta Zero: 0.6296408809994218\n",
-      " Beta One: 1.059560482455163\n",
-      " RMSE: 1.7767664541321468\n",
+      "Beta Zero: 0.6327502813848667\n",
+      " Beta One: 1.0549980762690412\n",
+      " RMSE: 1.9705800375775668\n",
       "\n",
       "\n",
       "\n",
       "\n",
-      "Beta Zero: 0.6291698498385498\n",
-      " Beta One: 1.0563461678779813\n",
-      " RMSE: 1.7907106627069695\n",
+      "Beta Zero: 0.6337238157886527\n",
+      " Beta One: 1.056587935918052\n",
+      " RMSE: 1.968437852555201\n",
       "\n",
       "\n",
       "\n",
       "\n",
-      "Beta Zero: 0.6409793963602071\n",
-      " Beta One: 1.051370485364237\n",
-      " RMSE: 1.9288857491167664\n",
+      "Beta Zero: 0.625228240906277\n",
+      " Beta One: 1.0626716031487138\n",
+      " RMSE: 1.975822719535096\n",
       "\n",
       "\n",
       "\n",
       "\n",
-      "Beta Zero: 0.6330620738170407\n",
-      " Beta One: 1.0534979305792749\n",
-      " RMSE: 1.9909882469422375\n",
+      "Beta Zero: 0.6357930615689642\n",
+      " Beta One: 1.0531967331840661\n",
+      " RMSE: 1.9809986150593495\n",
       "\n",
       "\n",
       "\n",
       "\n",
-      "Beta Zero: 0.6374158744805511\n",
-      " Beta One: 1.052733984673569\n",
-      " RMSE: 1.9900874370308468\n",
+      "Beta Zero: 0.631691858769166\n",
+      " Beta One: 1.0549299935333831\n",
+      " RMSE: 1.9125762718478998\n",
       "\n",
       "\n",
       "\n",
       "\n",
-      "Beta Zero: 0.6303350860221548\n",
-      " Beta One: 1.0599947704805512\n",
-      " RMSE: 1.917565782752449\n",
+      "Beta Zero: 0.6344961759562981\n",
+      " Beta One: 1.0549730391933656\n",
+      " RMSE: 1.9194572894280613\n",
       "\n",
       "\n",
       "\n",
       "\n",
       "\n",
-      " Média do erro: 1.8779021340926891\n",
-      "Desvio do erro: 0.08962459023876017\n"
+      " Média do erro: 1.9511922255004799\n",
+      "Desvio do erro: 0.0874382537764388\n"
      ]
     }
    ],
@@ -2481,16 +2481,95 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def my_calc_error(x_train, y_train, x_test, y_test) -> float:\n",
+    "        \"\"\"\n",
+    "        \"\"\"\n",
+    "        beta_zero, beta_one = my_train(x_train, y_train)\n",
+    "        \n",
+    "        pred_test = my_predict(beta_one, beta_zero, x_test)\n",
+    "\n",
+    "        error = my_mrse(pred_test, y_test)\n",
+    "\n",
+    "        return error\n",
+    " \n",
+    "\n",
+    "def show_results(errors: list[float]) -> None:\n",
+    "        \n",
+    "        print(f\"\\n Média do erro: {my_mean(errors)}\\nDesvio do erro: {my_std(errors)}\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Aplicar o K-FOLD na Base"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from random import shuffle\n",
+    "\n",
+    "def k_fold(data: np.ndarray, target: np.ndarray, k: int=5, random: bool=True):\n",
+    "    # Embaralhar os dados\n",
+    "    if random:\n",
+    "        combined = list(zip(data, target))\n",
+    "        shuffle(combined)\n",
+    "        data[:], target[:] = zip(*combined) # * serve pra descompactar a lista de tuplas para o zip conseguir remontar os dados\n",
+    "        \n",
+    "\n",
+    "    fold_size = len(data) // k\n",
+    "    errors = []\n",
+    "\n",
+    "    for i in range(k):\n",
+    "        start = i * fold_size\n",
+    "        end = (i + 1) * fold_size\n",
+    "\n",
+    "        x_test = data[start:end]\n",
+    "        y_test = target[start:end]\n",
+    "\n",
+    "        x_train = np.concatenate([data[:start], data[end:]]) # Seleciona os dados de treino para o fold atual. Pega todos os dados antes do índice start e todos os dados após o índice end, e os concatena.\n",
+    "        y_train = np.concatenate([target[:start], target[end:]]) # Seleciona os alvos de treino para o fold atual. Pega todos os alvos antes do índice start e todos os alvos após o índice end, e os concatena.\n",
+    "        \n",
+    "        errors.append(my_calc_error(x_train, y_train, x_test, y_test))\n",
+    "\n",
+    "\n",
+    "    return errors\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " Média do erro: 1.8983697120170806\n",
+      "Desvio do erro: 0.17029480071206549\n"
+     ]
+    }
+   ],
+   "source": [
+    "errors = k_fold(x_data, y_data, k=10)\n",
+    "\n",
+    "show_results(errors)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "sistemas-inteligentes-tODIqpYk-py3.12",
    "language": "python",
    "name": "python3"
   },
