--- a/sistemas-inteligentes/class/2024-10-23/gradient_descent.ipynb
+++ b/sistemas-inteligentes/class/2024-10-23/gradient_descent.ipynb
@@ -13,12 +13,12 @@
     "- 5 - Inicializar os Betas com Valores aleatórios\n",
     "- 6 - Criar a função da Descida do Gradiente\n",
     "- 7 - Avaliação do conjunto de testes (predições)\n",
-    "- 8 - Calcumar RSME"
+    "- 8 - Calcular RSME"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +397,7 @@
        "[234005 rows x 23 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +436,7 @@
        "Name: profit, Length: 234005, dtype: float64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -808,7 +808,7 @@
        "[234005 rows x 22 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -820,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -876,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -899,7 +899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -944,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -968,17 +968,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.37454012 0.95071431 0.73199394]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def initialize_theta(n: int):\n",
     "    \"\"\"\n",
@@ -995,7 +987,6 @@
     "    np.random.seed(42)  # Definindo uma seed para reprodutibilidade (A escolha do número 42 como seed para a geração de números aleatórios é uma referência cultural popular. O número 42 é conhecido como \"a resposta para a vida, o universo e tudo mais\" no livro \"O Guia do Mochileiro das Galáxias\" de Douglas Adams. É uma escolha comum entre programadores e cientistas de dados por causa dessa referência. No entanto, a escolha do número 42 é arbitrária e qualquer outro número poderia ser usado como seed. O importante é que definir uma seed garante que a sequência de números aleatórios gerados seja a mesma a cada execução do código, o que é útil para reprodutibilidade e depuração.)\n",
     "    theta = np.random.rand(n)\n",
     "    return theta\n",
-    "\n",
     "# Exemplo de uso\n",
     "# num_features = 3  # Supondo que temos 2 características + 1 termo de bias\n",
     "# theta = initialize_theta(num_features)\n",
@@ -1011,18 +1002,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Parâmetros ajustados: [ 5.40855968 -0.06286558]\n",
-      "Histórico de custo: [np.float64(0.6078516565898326), np.float64(0.6067977876725694), np.float64(0.6057457459111308), np.float64(0.6046955281376667), np.float64(0.6036471311898203), np.float64(0.602600551910716), np.float64(0.6015557871489531), np.float64(0.6005128337585934), np.float64(0.599471688599154), np.float64(0.5984323485355958)]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def gradient_descent(X:np.ndarray, y:list, theta:list, alpha:float, num_iters: int = 1000):\n",
     "    \"\"\"\n",
@@ -1048,6 +1030,7 @@
     "    \"\"\"\n",
     "    m = len(y)  # Número de exemplos de treinamento\n",
     "    cost_history = []\n",
+    "    \n",
     "\n",
     "    for _ in range(num_iters):\n",
     "        predictions = X.dot(theta)  # Calcula as previsões\n",
@@ -1074,11 +1057,92 @@
     "# print(\"Parâmetros ajustados:\", theta)\n",
     "# print(\"Histórico de custo:\", cost_history[-10:])  # Mostrando os últimos 10 valores do custo"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## STEP 7 - Avaliação do conjunto de testes (predições)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def predicts(x:np.ndarray, theta:list):\n",
+    "    \"\"\"\n",
+    "    Realiza previsões com base nos parâmetros theta ajustados.\n",
+    "\n",
+    "    Parâmetros:\n",
+    "    X : array-like, shape (m, n)\n",
+    "        Matriz de características, onde m é o número de exemplos e n é o número de características.\n",
+    "    theta : array-like, shape (n,)\n",
+    "        Vetor de parâmetros ajustados.\n",
+    "\n",
+    "    Retorna:\n",
+    "    numpy.ndarray\n",
+    "        Vetor de previsões.\n",
+    "    \"\"\"\n",
+    "    predictions = x.dot(theta)  # Calcula as previsões\n",
+    "    return predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "betas = initialize_theta(x_train.shape[1])\n",
+    "alpha = 0.01\n",
+    "num_iters = 1000\n",
+    "betas, cost_history = gradient_descent(x_train, y_train, betas, alpha, num_iters)\n",
+    "\n",
+    "predictions = predicts(x_test,betas)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## STEP 8 - Calcular RMSE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions = predictions.tolist()\n",
+    "y_test = y_test.tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MRSE: 2.5491834288036297\n"
+     ]
+    }
+   ],
+   "source": [
+    "mse = my_mrse(predictions, y_test)\n",
+    "print(\"MRSE:\", mse)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "sistemas-inteligentes-tODIqpYk-py3.12",
    "language": "python",
    "name": "python3"
   },
