--- a/sistemas-inteligentes/class/2024-10-23/pre.ipynb
+++ b/sistemas-inteligentes/class/2024-10-23/pre.ipynb
@@ -4992,7 +4992,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "sistemas-inteligentes-tODIqpYk-py3.12",
    "language": "python",
    "name": "python3"
   },
