falta so o plot

--- a/sistemas-inteligentes/class/2024-11-13/main.ipynb
+++ b/sistemas-inteligentes/class/2024-11-13/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
        "[548 rows x 10 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
        "Name: FAMACHA, Length: 548, dtype: int64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +479,7 @@
        "[548 rows x 9 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1055,7 +1055,7 @@
        " [158.19, 134.38, 134.93, 175.0, 137.0, 137.0, 67.78, 54.45, 52.56]]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1066,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1075,7 +1075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1631,7 +1631,7 @@
        " 0]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1642,7 +1642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1715,7 +1715,22 @@
     "            classes: list[int]\n",
     "        ) -> int:\n",
     "\n",
-    "        return max(classes, key=classes.count)\n",
+    "        greater_quantity = 0\n",
+    "        current_quantity = 0\n",
+    "\n",
+    "        for i in range(len(classes)):\n",
+    "            for j in range(len(classes)):\n",
+    "                if classes[i] == classes[j]:\n",
+    "                    current_quantity += 1\n",
+    "\n",
+    "            if current_quantity > greater_quantity:\n",
+    "                most_voted = classes[i]\n",
+    "                greater_quantity = current_quantity\n",
+    "\n",
+    "            current_quantity = 0\n",
+    "\n",
+    "        return most_voted\n",
+    "\n",
     "\n",
     "    def predicts(\n",
     "            input_features: list[list[float]] | list[float]\n",
@@ -1737,7 +1752,7 @@
     "\n",
     "            _, classes = calc_distance(features, input_features, k)\n",
     "\n",
-    "        result.append(predict(classes))\n",
+    "            result.append(predict(classes))\n",
     "\n",
     "        return result\n",
     "    \n",
@@ -1746,34 +1761,310 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def my_accuracy(\n",
+    "        predicts: list[int],\n",
+    "        targets: list[int]\n",
+    ") -> float:\n",
+    "    \n",
+    "    if not isinstance(predicts, list) or not isinstance(targets, list):\n",
+    "        raise ValueError(\"Os parâmetros devem ser listas\")\n",
+    "\n",
+    "    if len(predicts) != len(targets):\n",
+    "        raise ValueError(\"As listas devem ter o mesmo tamanho\")\n",
+    "    \n",
+    "    corrects = 0\n",
+    "\n",
+    "    total = len(predicts)\n",
+    "\n",
+    "    for i in range(total):\n",
+    "        if predicts[i] == targets[i]:\n",
+    "            corrects += 1\n",
+    "\n",
+    "    return corrects/total"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test_predict_x_10(epoch: int = 10, ks:list[int] = [5]) -> None:\n",
+    "    for k in ks:\n",
+    "\n",
+    "        for _ in range(epoch):\n",
+    "\n",
+    "            x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.3)\n",
+    "\n",
+    "            y_pred = my_knn(x_train, y_train, x_test, k)\n",
+    "\n",
+    "            print(f\"K = {k}\")\n",
+    "\n",
+    "            #print(f\"\\nK: {k}\\nPredict:   {(y_pred)}\\n expected: {(y_test)}\")\n",
+    "\n",
+    "            print(\n",
+    "                f\"Accuracy: {my_accuracy(y_pred, y_test):.2f}\\n\\n\"\n",
+    "            )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 0, 1, 1, 0, 1, 1, 0, 1, 1, 1, 0, 0, 1, 0, 1, 1, 1, 1, 0, 0, 1, 0, 1, 1, 1, 1, 0, 1, 1, 1, 0, 0, 0, 0, 0, 1, 0, 1, 1, 0, 1, 1, 1, 0, 1, 1, 1, 1, 0, 1, 1, 0, 0, 1, 1, 1, 1, 1, 1, 1, 0, 0, 1, 1, 1, 0, 0, 1, 1, 1, 0, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0, 0, 1, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 0, 1, 0, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 0, 1, 0, 1, 1, 1, 1, 0, 1, 1, 0, 0, 1, 0, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 1, 1, 1, 0, 1, 1, 1, 1, 1, 0, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1]\n",
-      "[1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 0, 0, 1, 1, 1, 1, 1, 0, 0, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 0, 1, 1, 1, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 0, 0, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 0, 0, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0, 1, 0, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 0, 1, 1, 0, 1, 1, 0, 1, 1, 1, 1, 0, 1, 0, 0, 0, 0]\n",
-      "[1, 1, 0, 1, 1, 1, 0, 1, 0, 1, 1, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 0, 1, 1, 0, 0, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 0, 1, 1, 0, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 0, 1, 1, 0, 0, 1, 1, 1, 1, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 0, 0, 1, 1, 0, 1, 1, 1, 1, 1, 0, 1, 1, 0, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 0, 0, 1, 0, 1, 0, 0, 1, 0, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 0, 1, 1, 1, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1]\n",
-      "[1, 0, 1, 0, 1, 1, 1, 1, 1, 1, 0, 1, 0, 1, 1, 0, 0, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 0, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 0, 0, 1, 0, 1, 0, 0, 1, 1, 0, 0, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 0, 1, 1, 1, 1, 0, 1, 1, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 0, 1, 1, 0, 1, 1, 1, 0, 1, 0, 1, 0, 0, 0, 1, 1, 0, 1, 0, 1, 0, 1, 1, 1, 0, 1, 0, 0, 1, 0, 0, 1, 1, 0, 0, 0, 1, 0, 0, 1, 1, 0, 1, 0, 0, 1, 0, 1, 1, 1, 0, 1, 0, 1, 0, 1, 1]\n",
-      "[1, 1, 0, 1, 1, 1, 1, 1, 1, 0, 0, 1, 1, 0, 1, 0, 1, 0, 1, 0, 1, 1, 1, 0, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 0, 1, 1, 0, 1, 0, 0, 1, 1, 1, 1, 0, 1, 0, 1, 0, 1, 1, 1, 1, 0, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 0, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0, 0, 1, 0, 0, 1, 0, 1, 0, 1, 0, 0, 1, 0, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 0, 1, 1, 0, 1, 0, 1, 1, 1, 1, 0, 1, 1, 0, 0, 1, 0, 0, 0, 1, 1, 1, 0, 1, 1, 0, 1, 0, 1, 0, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 0, 1, 1, 0, 1, 1, 1, 1, 1]\n",
-      "[1, 0, 0, 1, 1, 1, 0, 1, 0, 1, 0, 1, 1, 0, 1, 1, 1, 1, 0, 0, 1, 1, 1, 0, 1, 1, 0, 1, 0, 1, 1, 0, 1, 0, 1, 1, 1, 0, 1, 1, 1, 1, 0, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 0, 0, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0, 0, 1, 1, 0, 0, 1, 1, 1, 1, 1, 1, 0, 1, 0, 0, 1, 1, 0, 1, 0, 1, 1, 1, 1, 1, 0, 1, 0, 1, 1, 0, 1, 1, 1, 0, 1, 1, 1, 1, 0, 1, 1, 1, 1, 0, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 0, 1, 0, 0, 1, 0, 1, 0, 1, 0, 0, 0, 1, 0, 1, 1, 1, 1]\n",
-      "[1, 0, 0, 0, 1, 1, 1, 0, 1, 0, 1, 1, 0, 0, 1, 0, 1, 1, 1, 1, 0, 0, 1, 1, 1, 1, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 1, 0, 1, 0, 1, 1, 0, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 0, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 1, 1, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 1, 0, 0, 0, 0, 0, 1, 1, 1, 1, 0, 1, 1, 1, 0, 1, 0, 1, 0, 0, 0, 1, 1, 1, 1, 1, 1, 0, 0, 1, 1, 1, 1, 0, 1, 0, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 0, 1, 0, 1, 1, 1, 1, 0, 1, 1, 1, 0, 1, 0, 0, 1, 0, 1, 1, 1, 1, 0, 1, 1, 1, 1, 0, 1, 0, 1, 0, 0, 0, 1, 0, 1, 1]\n",
-      "[1, 0, 0, 1, 1, 0, 0, 1, 0, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 0, 1, 1, 1, 1, 0, 1, 0, 0, 0, 0, 1, 0, 1, 1, 1, 0, 1, 0, 0, 1, 0, 1, 0, 1, 1, 1, 0, 0, 0, 1, 1, 1, 0, 1, 1, 1, 1, 0, 1, 1, 0, 1, 1, 1, 0, 0, 0, 1, 1, 1, 1, 0, 1, 1, 0, 1, 1, 1, 1, 1, 1, 0, 1, 1, 0, 1, 1, 0, 1, 1, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 1, 1, 0, 0, 1, 0, 1, 1, 0, 0, 0, 1, 1, 1, 1, 0, 0, 1, 1, 1, 0, 1, 0, 1, 0, 1, 0, 0, 1, 1, 1, 1, 1, 1, 0, 0, 1, 0, 1, 0, 1, 0, 1, 1, 1, 0, 0]\n",
-      "[1, 1, 1, 1, 0, 1, 0, 1, 1, 1, 0, 1, 0, 1, 1, 1, 0, 0, 0, 1, 1, 0, 0, 1, 1, 1, 0, 1, 0, 0, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 0, 1, 0, 0, 1, 1, 0, 0, 1, 1, 1, 1, 1, 0, 1, 1, 0, 1, 1, 1, 1, 0, 0, 1, 1, 0, 1, 1, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 1, 1, 0, 1, 1, 0, 0, 1, 1, 1, 1, 1, 0, 1, 1, 0, 1, 1, 0, 0, 1, 0, 1, 1, 0, 0, 1, 1, 1, 1, 0, 1, 0, 0, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1]\n",
-      "[1, 0, 1, 1, 0, 1, 1, 0, 1, 1, 1, 0, 0, 1, 1, 1, 0, 1, 1, 1, 1, 1, 0, 0, 1, 0, 0, 1, 1, 1, 0, 1, 0, 1, 0, 0, 1, 1, 1, 1, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 0, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 0, 1, 0, 0, 0, 0, 0, 1, 1, 1, 0, 1, 1, 1, 0, 0, 0, 0, 1, 0, 0, 1, 0, 1, 1, 0, 0, 1, 0, 1, 0, 0, 0, 1, 0, 1, 1, 1, 0, 1, 1, 0, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 0, 0, 0, 1, 1, 1, 1, 1, 1, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1]\n"
+      "K = 5\n",
+      "Accuracy: 0.59\n",
+      "\n",
+      "\n",
+      "K = 5\n",
+      "Accuracy: 0.63\n",
+      "\n",
+      "\n",
+      "K = 5\n",
+      "Accuracy: 0.66\n",
+      "\n",
+      "\n",
+      "K = 5\n",
+      "Accuracy: 0.70\n",
+      "\n",
+      "\n",
+      "K = 5\n",
+      "Accuracy: 0.66\n",
+      "\n",
+      "\n",
+      "K = 5\n",
+      "Accuracy: 0.69\n",
+      "\n",
+      "\n",
+      "K = 5\n",
+      "Accuracy: 0.73\n",
+      "\n",
+      "\n",
+      "K = 5\n",
+      "Accuracy: 0.71\n",
+      "\n",
+      "\n",
+      "K = 5\n",
+      "Accuracy: 0.73\n",
+      "\n",
+      "\n",
+      "K = 5\n",
+      "Accuracy: 0.64\n",
+      "\n",
+      "\n",
+      "K = 7\n",
+      "Accuracy: 0.66\n",
+      "\n",
+      "\n",
+      "K = 7\n",
+      "Accuracy: 0.67\n",
+      "\n",
+      "\n",
+      "K = 7\n",
+      "Accuracy: 0.66\n",
+      "\n",
+      "\n",
+      "K = 7\n",
+      "Accuracy: 0.66\n",
+      "\n",
+      "\n",
+      "K = 7\n",
+      "Accuracy: 0.68\n",
+      "\n",
+      "\n",
+      "K = 7\n",
+      "Accuracy: 0.69\n",
+      "\n",
+      "\n",
+      "K = 7\n",
+      "Accuracy: 0.68\n",
+      "\n",
+      "\n",
+      "K = 7\n",
+      "Accuracy: 0.62\n",
+      "\n",
+      "\n",
+      "K = 7\n",
+      "Accuracy: 0.65\n",
+      "\n",
+      "\n",
+      "K = 7\n",
+      "Accuracy: 0.64\n",
+      "\n",
+      "\n",
+      "K = 9\n",
+      "Accuracy: 0.62\n",
+      "\n",
+      "\n",
+      "K = 9\n",
+      "Accuracy: 0.67\n",
+      "\n",
+      "\n",
+      "K = 9\n",
+      "Accuracy: 0.68\n",
+      "\n",
+      "\n",
+      "K = 9\n",
+      "Accuracy: 0.59\n",
+      "\n",
+      "\n",
+      "K = 9\n",
+      "Accuracy: 0.67\n",
+      "\n",
+      "\n",
+      "K = 9\n",
+      "Accuracy: 0.70\n",
+      "\n",
+      "\n",
+      "K = 9\n",
+      "Accuracy: 0.67\n",
+      "\n",
+      "\n",
+      "K = 9\n",
+      "Accuracy: 0.70\n",
+      "\n",
+      "\n",
+      "K = 9\n",
+      "Accuracy: 0.70\n",
+      "\n",
+      "\n",
+      "K = 9\n",
+      "Accuracy: 0.64\n",
+      "\n",
+      "\n",
+      "K = 11\n",
+      "Accuracy: 0.72\n",
+      "\n",
+      "\n",
+      "K = 11\n",
+      "Accuracy: 0.70\n",
+      "\n",
+      "\n",
+      "K = 11\n",
+      "Accuracy: 0.64\n",
+      "\n",
+      "\n",
+      "K = 11\n",
+      "Accuracy: 0.71\n",
+      "\n",
+      "\n",
+      "K = 11\n",
+      "Accuracy: 0.71\n",
+      "\n",
+      "\n",
+      "K = 11\n",
+      "Accuracy: 0.63\n",
+      "\n",
+      "\n",
+      "K = 11\n",
+      "Accuracy: 0.66\n",
+      "\n",
+      "\n",
+      "K = 11\n",
+      "Accuracy: 0.72\n",
+      "\n",
+      "\n",
+      "K = 11\n",
+      "Accuracy: 0.62\n",
+      "\n",
+      "\n",
+      "K = 11\n",
+      "Accuracy: 0.74\n",
+      "\n",
+      "\n",
+      "K = 13\n",
+      "Accuracy: 0.65\n",
+      "\n",
+      "\n",
+      "K = 13\n",
+      "Accuracy: 0.68\n",
+      "\n",
+      "\n",
+      "K = 13\n",
+      "Accuracy: 0.67\n",
+      "\n",
+      "\n",
+      "K = 13\n",
+      "Accuracy: 0.65\n",
+      "\n",
+      "\n",
+      "K = 13\n",
+      "Accuracy: 0.70\n",
+      "\n",
+      "\n",
+      "K = 13\n",
+      "Accuracy: 0.70\n",
+      "\n",
+      "\n",
+      "K = 13\n",
+      "Accuracy: 0.68\n",
+      "\n",
+      "\n",
+      "K = 13\n",
+      "Accuracy: 0.60\n",
+      "\n",
+      "\n",
+      "K = 13\n",
+      "Accuracy: 0.65\n",
+      "\n",
+      "\n",
+      "K = 13\n",
+      "Accuracy: 0.65\n",
+      "\n",
+      "\n",
+      "K = 15\n",
+      "Accuracy: 0.72\n",
+      "\n",
+      "\n",
+      "K = 15\n",
+      "Accuracy: 0.67\n",
+      "\n",
+      "\n",
+      "K = 15\n",
+      "Accuracy: 0.70\n",
+      "\n",
+      "\n",
+      "K = 15\n",
+      "Accuracy: 0.61\n",
+      "\n",
+      "\n",
+      "K = 15\n",
+      "Accuracy: 0.67\n",
+      "\n",
+      "\n",
+      "K = 15\n",
+      "Accuracy: 0.71\n",
+      "\n",
+      "\n",
+      "K = 15\n",
+      "Accuracy: 0.62\n",
+      "\n",
+      "\n",
+      "K = 15\n",
+      "Accuracy: 0.68\n",
+      "\n",
+      "\n",
+      "K = 15\n",
+      "Accuracy: 0.65\n",
+      "\n",
+      "\n",
+      "K = 15\n",
+      "Accuracy: 0.69\n",
+      "\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "for _ in range(10):\n",
-    "\n",
-    "    x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.3)\n",
-    "\n",
-    "    y_pred = my_knn(x_train, y_train, x_test)\n",
-    "\n",
-    "    print(y_pred)"
+    "test_predict_x_10(epoch=10, ks=[5,7,9,11,13,15])"
    ]
   }
  ],
