--- a/sistemas-inteligentes/class/2024-11-13/main.ipynb
+++ b/sistemas-inteligentes/class/2024-11-13/main.ipynb
@@ -2378,7 +2378,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "sistemas-inteligentes-tODIqpYk-py3.12",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
