--- a/sistemas-inteligentes/class/2024-10-23/gradient_descent.ipynb
+++ b/sistemas-inteligentes/class/2024-10-23/gradient_descent.ipynb
@@ -3159,7 +3159,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "sistemas-inteligentes-tODIqpYk-py3.12",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
